--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/script.js"></script>
     <!-- <script src="clock.js"></script> -->
 </head>
 
@@ -17,7 +17,7 @@
     <div id="gradient1"></div>
     <main>
         
-        <link rel='stylesheet' href='style.css'>
+        <link rel="stylesheet" href="https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/style.css">
         <div class="calendar-wrapper">
             <button id="btnPrev" type="button">предыдущий</button>
             <button id="btnNext" type="button">следующий</button>
