--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="gradient1"></div>
     <main>
         
-        <link rel="style.css">
+        <link rel="stylesheet" href="style.css">
         <div class="calendar-wrapper">
             <button id="btnPrev" type="button">предыдущий</button>
             <button id="btnNext" type="button">следующий</button>
