--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@ a {
 
 .calendar-wrapper {
     width: 360px;
-    margin: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
     padding: 2em;
     border: 1px solid #dcdcff;
     border-radius: 30px;
