--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ a {
 }
 
 .calendar-wrapper {
-    width: 360px;
-    margin-left: 15px;
-    margin-right: 15px;
-    padding: 2em;
+    width: 350px;
+    /*margin-left: 15px;
+    margin-right: 15px;*/
+    padding: 10px;
     border: 1px solid #dcdcff;
     border-radius: 30px;
     background: #e4f1ef;
