--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ h1{
 }
 
 footer{
-    height: 30px;
+    height: 90px;
     background-color: #1c1c1c;
 }
 
@@ -83,7 +83,8 @@ a {
 }
 
 .calendar-wrapper {
-    text-aligh: center;
+    margin-left: auto;
+    margin-right: auto;
     width: 360px;
     /*margin-left: 15px;
     margin-right: 15px;*/
