--- a/index.html
+++ b/index.html
@@ -494,6 +494,22 @@
         }
 
 
+
+
+
+
+
+//ПРОВЕРОЧНАЯ ФУНКЦИЯ!!! ВРЕМЕННО!!!
+setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/spring.png?raw=true');
+
+
+
+
+
+
+
+
+
         if (day <= 5 && month === 9) {
             //осень
             setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/autumn.png?raw=true');
