--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
         @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
 
+
+
+
+
+.calendar-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 360px;
+    padding: 10px;
+    border: 1px solid #dcdcff;
+    border-radius: 30px;
+    background: #e4f1ef;
+}
+
+@media (max-width: 480px) {
+    .calendar-wrapper {
+        width: auto;          /* Вместо фиксированной ширины */
+        margin-left: 15px;    /* Отступ слева */
+        margin-right: 15px;   /* Отступ справа */
+        box-sizing: border-box; /* Чтобы padding и border учитывались */
+    }
+}
+
+
+
+
+
+
+
+
+
         .rotate {
             /* transform: rotate(180deg); */
             padding-left: 10px;
