--- a/index.html
+++ b/index.html
@@ -14,27 +14,14 @@
 
 
 .calendar-wrapper {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 15;
+    margin-right: 15;
     width: 360px;
     padding: 10px;
     border: 1px solid #dcdcff;
     border-radius: 30px;
     background: #e4f1ef;
 }
-
-@media (max-width: 480px) {
-    .calendar-wrapper {
-        width: auto;          /* Вместо фиксированной ширины */
-        margin-left: 15px;    /* Отступ слева */
-        margin-right: 15px;   /* Отступ справа */
-        box-sizing: border-box; /* Чтобы padding и border учитывались */
-    }
-}
-
-
-
-
 
 
 
