--- a/index.html
+++ b/index.html
@@ -513,6 +513,20 @@
 
 
 
+// ПРОВЕРОЧНЫЙ!!!
+
+
+addImage('right-top', 'images/4-now.png', '200px', '10px', '0px');
+
+setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/matrix.png?raw=true');
+
+
+
+
+
+
+
+
         if (day <= 5 && month === 9) {
             //осень
             setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/autumn.png?raw=true');
