--- a/index.html
+++ b/index.html
@@ -473,37 +473,37 @@
 
         if ((day === 31 && month === 12) || (day <= 8 && month === 1)) {
             //новогодние праздники, с 31.12 по 08.01
-            addImage('left-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/new-year.png?raw=true', '150px', '-80px', '0px');
+            addImage('left-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/new-year.png?raw=true', '150px', '-80px', '0px');
         }
         else if (day === 23 && month === 2) {
             //день защитника отечества, 23.02
-            addImage('center-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/23-feb.png?raw=true', '100px', '0px', '0px');
+            addImage('center-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/23-feb.png?raw=true', '100px', '0px', '0px');
         }
         else if (day === 8 && month === 3) {
             //междунароный женский день, 08.03
-            addImage('center-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/8-mar.png?raw=true', '200px', '-20px', '0px');
+            addImage('center-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/8-mar.png?raw=true', '200px', '-20px', '0px');
         }
         else if (day === 12 && month === 4) {
             //день космонавтики, 12.04
-            addImage('center-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/12-apr.png?raw=true', '150px', '-20px', '0px');
+            addImage('center-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/12-apr.png?raw=true', '150px', '-20px', '0px');
         }
         else if (day === 1 && month === 5) {
             //день весны и труда, 01.05
-            addImage('right-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/1-may.png?raw=true', '100px', '0px', '0px');
+            addImage('right-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/1-may.png?raw=true', '100px', '0px', '0px');
         }
         else if (day === 7 && month === 5) {
             //день радио, 07.05
-            addImage('center-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/7-may.png?raw=true', '120px', '-10px', '0px');
+            addImage('center-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/7-may.png?raw=true', '120px', '-10px', '0px');
         }
         else if (day === 9 && month === 5) {
             //день победы, 09.05
-            addImage('right-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/9-may-2025.png?raw=true', '100px', '-80px', '-10px');
-            //addImage('center-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/9-may.png?raw=true', '170px', '-30px', '0px');
+            //addImage('right-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/9-may-2025.png?raw=true', '100px', '-80px', '-10px');
+            addImage('center-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/9-may.png?raw=true', '170px', '-30px', '0px');
 
         }
         else if (day === 12 && month === 6) {
             //день России, 12.06
-            setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/russian-flag.jfif?raw=true');
+            setResponsiveBackground('https://github.com/diy-electron1cs/DE_calendar/blob/main/images/russian-flag.jfif?raw=true');
         }
         else if (day === 3 && month === 9) {
             //3-е сентября!
@@ -514,31 +514,31 @@
         }
         else if (day === 4 && month === 11) {
             //день народного единства, 04.11
-            addImage('center-top', 'https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/4-now.png?raw=true', '150px', '-15px', '0px');
+            addImage('center-top', 'https://github.com/diy-electron1cs/DE_calendar/blob/main/images/4-now.png?raw=true', '150px', '-15px', '0px');
         }
 
     
 
         if (day <= 5 && month === 9) {
             //осень
-            setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/autumn.png?raw=true');
+            setResponsiveBackground('https://github.com/diy-electron1cs/DE_calendar/blob/main/images/autumn.png?raw=true');
         }
         else if (day <= 5 && month === 12) {
             //зима
-            setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/winter.png?raw=true');
+            setResponsiveBackground('https://github.com/diy-electron1cs/DE_calendar/blob/main/images/winter.png?raw=true');
         }
         else if (day <= 5 && month === 3) {
             //весна
-            setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/spring.png?raw=true');
+            setResponsiveBackground('https://github.com/diy-electron1cs/DE_calendar/blob/main/images/spring.png?raw=true');
         }
         else if (day <= 5 && month === 6) {
             //лето
-            setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/summer.png?raw=true');
+            setResponsiveBackground('https://github.com/diy-electron1cs/DE_calendar/blob/main/images/summer.png?raw=true');
         }
 
         if (isProgrammersDay(day, month, year) === true) {
             //день программиста, 256 посчёту
-            setResponsiveBackground('https://github.com/DIY-Elecron1cs/DE_calendar/blob/main/images/matrix.png?raw=true');
+            setResponsiveBackground('https://github.com/diy-electron1cs/DE_calendar/blob/main/images/matrix.png?raw=true');
         }
     </script>
 
